--- a/index.html
+++ b/index.html
@@ -10,9 +10,24 @@
 <body>
     <div id="parent-container">
         <div id="left-panel">
-            <button id="new-game">New Game</button>
-            <button id="new-round">New Round</button>
+
         </div>
+        <div id="start-menu">
+            <form action="" id="start-menu-form">
+                <label for="player1-name">Player 1:</label>
+                <input type="text" id="player1-name">
+                <label for="player2-name">Player 2:</label>
+                <input type="text" id="player2-name">
+                <button type="button" id="start-game">Start Game</button>
+            </form>  
+        </div>
+        <dialog id="win-dialog">
+            <p id="win-announcement"></p>
+            <p id="player1-wins"></p>
+            <p id="player2-wins"></p>
+            <button id="new-round">New Round</button>
+            <button id="new-game">New Game</button>
+        </dialog>
         <div id="board-container">
             <button class="board-cell" id="A1"></button>
             <button class="board-cell" id="A2"></button>
