Add font size adjustments
Adjusted font sizes and fine tuned the layout.

--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 </head>
 <body>
     <div id="parent-container">
-        <div id="left-panel">
-
-        </div>
         <div id="start-menu">
             <form action="" id="start-menu-form">
-                <label for="player1-name">Player 1:</label>
-                <input type="text" id="player1-name">
-                <label for="player2-name">Player 2:</label>
-                <input type="text" id="player2-name">
+                <label for="player1-name">Player 1:
+                    <input type="text" id="player1-name">
+                </label>
+                
+                <label for="player2-name">Player 2:
+                    <input type="text" id="player2-name">
+                </label>
+                
                 <button type="button" id="start-game">Start Game</button>
             </form>  
         </div>
